# vesyla

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  install_dependencies.sh  install_dependency.sh  make_appimage.sh  python_requirements.txt  requirements.txt  workspace.code-workspace
module/vs-alimpsim/: CMakeLists.txt
module/vs-alimpsim-sst/: .gitignore  CMakeLists.txt  README.md
module/vs-alimpsim-sst/common/: CMakeLists.txt  activationEvent.h  dataEvent.h  drra.h  instructionEvent.h  ioEvents.h  timingModel.cpp  timingModel.h
module/vs-alimpsim-sst/components/.vec_add/: CMakeLists.txt  vec_add.cpp  vec_add.h
module/vs-alimpsim-sst/components/dpu/: dpu.cpp  dpu.h
module/vs-alimpsim-sst/components/drra/: io_buffer.cpp  io_buffer.h  sequencer.cpp  sequencer.h  vec_add.cpp  vec_add.h
module/vs-alimpsim-sst/components/io_buffer/: Array.hpp  custom_backing.h  io_buffer.cpp  io_buffer.h
module/vs-alimpsim-sst/components/io_sram/: io_sram.cpp  io_sram.h
module/vs-alimpsim-sst/components/rf/: rf.cpp  rf.h
module/vs-alimpsim-sst/components/sequencer/: sequencer.cpp  sequencer.h
module/vs-alimpsim-sst/components/switchbox/: switchbox.cpp  switchbox.h
module/vs-alimpsim-sst/components/vec_add/: vec_add.cpp  vec_add.h
module/vs-alimpsim-sst/include/common/: dataEvent.h  drra.h  instructionEvent.h  timingModel.h
module/vs-alimpsim-sst/tests/: CMakeLists.txt  Makefile  example0_drra_template.py  registerFileReadWriteNarrow.py  simpleExample.py  switchboxFSMSwitching.py  test_timingModel.cpp  testsuite_drra_components.py  testsuite_drra_simpleExample.py
module/vs-alimpsim-sst/tests/refFiles/: registerFileReadWriteNarrow.out  simpleExample.out  simpleExample_outputBuffer.mem  switchboxFSMSwitching.out
module/vs-alimpsim/src/: DataStructure.proto  DataStructure_pb2.py  EventPool.py  HandlerPool.py  InitEvent.py  Parser.py  ResourcePool.py  Scheduler.py  WorkerManager.py  arch.json  main.py
module/vs-compile/: CMakeLists.txt  dummy.pasm
module/vs-compile/src/cidfg/: Types.hpp
module/vs-compile/src/pasm/: AddHaltPass.cpp  Ops.td  Parser.cpp  Parser.hpp  Types.hpp
module/vs-compile/src/pasmpar/: flex_util.cpp  global_util.cpp  pasm.y
module/vs-compile/src/schedule/: Scheduler.cpp
module/vs-compile/src/tm/: Operation.cpp
module/vs-compile/src/util/: GlobalVar.hpp  SysPath.cpp
module/vs-compile/unit_test/tm/: overall_test.cpp
module/vs-component/: CMakeLists.txt  Cargo.toml  README.md  api.sv  doc.md  isa.json  schema.json  simple_example.json  test.json
module/vs-component/components/: CMakeLists.txt
module/vs-component/components/fabric/: CMakeLists.txt  fabric.sv  fabric_tb.sv
module/vs-component/components/utils/: CMakeLists.txt  agu.sv  sram_model.sv
module/vs-component/docs/: json_input_format.md  library_extension_protocol.md
module/vs-component/output/rtl/: cell_impl.sv  dummy_impl.sv  dummy_impl2.sv  fabric.sv  sequencer_impl.sv  vec_add_impl.sv
module/vs-component/rtl_model/: .gitignore  fabric.sv  fabric_tb.sv  hierarchy.txt  run.sh
module/vs-component/rtl_model/pasm/: 0.cstr  0.pasm
module/vs-component/src/: arch_visual_gen.rs  collector.rs  drra.rs  generator.rs  isa.rs  isa_gen.rs  main.rs  rtl_code_gen.rs  rtl_sim_gen.rs  sst_sim_gen.rs  utils.rs
module/vs-component/sst/: sst_sim_template.py.j2
module/vs-component/template/resource/: isa.json  readme.md
module/vs-component/test_json/: cell_impl.json  dummy_impl.json  fabric.json  sequencer_impl.json  vec_add_impl.json
module/vs-entry/: CMakeLists.txt  Cargo.toml
module/vs-entry/assets/applications/: vesyla-suite.desktop  vesyla.desktop
module/vs-entry/src/: main.rs
module/vs-init/: .gitmodules  CMakeLists.txt  README.md
module/vs-init/module/vs-util/: CMakeLists.txt
module/vs-init/src/: VeConfig.hpp  main.cpp  main.hpp
module/vs-opt-asm/: CMakeLists.txt  dummy.mlir
module/vs-opt-asm/src/asm/: Dialect.cpp  Dialect.td  Ops.cpp  Ops.td  Types.cpp  Types.hpp  Types.td  dummy.mlir
module/vs-opt-asm/src/cidfg/: Dialect.hpp  Ops.td  Passes.cpp  Passes.hpp  Passes.td  generate.sh
module/vs-opt-asm/src/pasm/: Ops.cpp  Ops.hpp  Ops.td  Types.cpp  Types.td
module/vs-schedule/: CMakeLists.txt
module/vs-schedule/src/: anchor.py  codegen.py  constraint.py  dispatch.py  ds.proto  ds_pb2.py  generate.py  main.py  operation.py  parse.py  schedule.py  solver.py  sync.py  trace.py
module/vs-schedule/test/: main.py  visualization.py
module/vs-testcase/: CMakeLists.txt  Cargo.toml
module/vs-testcase/src/: main.py  main.rs
module/vs-testcase/template/drra/: arch.json  intro.md  isa.json  main.cpp
modules/: Cargo.toml  build.rs
modules/build-utils/: Cargo.toml
modules/build-utils/src/: lib.rs
modules/src/: main.rs
modules/vs-compile/: CMakeLists.txt  dummy.mlir  dummy.pasm
modules/vs-compile/src/cdfg/: Dialect.cpp  (+8 more)
modules/vs-component/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  schema.json
modules/vs-component/assets/: arch_example.json  component_arch_schema.json  component_isa_schema.json  isa_doc_template.md.jinja  isa_example.json
modules/vs-component/src/: arch_visual_gen.rs  assembly_manager.rs  component_generator.rs  drra.rs  isa.rs  isa_gen.rs  main.rs  models.rs  resolver.rs  rtl_code_gen.rs  rtl_generator.rs  sst_sim_gen.rs  utils.rs
modules/vs-component/sst/: sst_sim_template.py.jinja
modules/vs-component/template/: Bender.yml.jinja  CMakeLists.txt
modules/vs-component/tests/: component_isa.json  fabric_arch.json
modules/vs-gadget/: CMakeLists.txt  Cargo.toml
modules/vs-gadget/src/: main.rs
modules/vs-manas/: Cargo.toml  build.rs
modules/vs-manas/src/: asm.l  asm.rs  gen.rs  instr.rs  main.rs  parser.rs
modules/vs-schedule/: .gitignore  CMakeLists.txt
modules/vs-schedule/src/: anchor.py  dispatch.py  generate.py  main.py  schedule.py  solver.py  sync.py  trace.py
modules/vs-testcase/: CMakeLists.txt  Cargo.toml
modules/vs-testcase/assets/: autotest_template.robot.j2  autotest_template.robot.jinja  run.sh
modules/vs-testcase/src/: main.rs
(+560 files in other folders)
