[package]
name = "vesyla"
version = "4.2.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["vs-component", "vs-testcase", "vs-manas"]

[dependencies]
argparse = "0.2.0"
env_logger = "0.10.0"
log = "0.4.14"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
rand = "0.8.4"
regex = "1.8.5"
