[package]
name = "vesyla"
version = "4.3.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["vs-component", "vs-testcase", "vs-manas"]

[build-dependencies]
build-utils = { path = "build-utils" }

[dependencies]
env_logger = "0.10.0"
log = "0.4.14"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
regex = "1.8.5"
