[package]
name = "vs-component"
version = "0.1.0"
edition = "2021"

# targets
[[bin]]
name = "vs-component"
path = "src/main.rs"


# Dependencies can be added here. For example:
[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.14"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
env_logger = "0.10.0"
argparse = "0.2.0"
serde = "1.0.215"
serde_json = "1.0.70"
minijinja = "2.0.2"
bs58 = "0.5.1"
jsonschema = "0.26.1"
walkdir = "2.5.0"
