[package]
name = "vs-component"
version = "0.2.0"
edition = "2021"
description = "Vesyla tool to generate fabrics RTL and SST simulation configurations from high-level descriptions."

# targets
[[bin]]
name = "vs-component"
path = "src/main.rs"


# Dependencies can be added here. For example:
[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.14"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
env_logger = "0.10.0"
argparse = "0.2.0"
serde = "1.0.215"
serde_json = "1.0.70"
serde_yml = "0.0.12"
minijinja = { version = "2.0.2" }
bs58 = "0.5.1"
jsonschema = "0.26.1"
walkdir = "2.5.0"
svg = "0.18.0"
usvg = "0.21"
resvg = "0.21.0"
printpdf = "0.3"
svg2pdf = "0.1.0"
rand = "0.8.4"
