set(CURRENT_SUBPROJECT_NAME "vs-entry")

file(GLOB SRC "src/*.rs")

add_custom_command(
   OUTPUT ${CMAKE_BINARY_DIR}/cargo/${CURRENT_SUBPROJECT_NAME}/release/${CURRENT_SUBPROJECT_NAME}
   DEPENDS ${SRC}
   COMMAND mkdir -p ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} &&
    mkdir -p ${CMAKE_BINARY_DIR}/cargo/${CURRENT_SUBPROJECT_NAME} &&
    cargo build --release --target-dir=${CMAKE_BINARY_DIR}/cargo/${CURRENT_SUBPROJECT_NAME} &&
    cp -p ${CMAKE_BINARY_DIR}/cargo/${CURRENT_SUBPROJECT_NAME}/release/${CURRENT_SUBPROJECT_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ &&
    mv ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CURRENT_SUBPROJECT_NAME} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_PROJECT_NAME}
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)

add_custom_target(gen-${CURRENT_SUBPROJECT_NAME} ALL DEPENDS ${CMAKE_BINARY_DIR}/cargo/${CURRENT_SUBPROJECT_NAME}/release/${CURRENT_SUBPROJECT_NAME})
install(PROGRAMS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_PROJECT_NAME} DESTINATION bin COMPONENT ${CMAKE_PROJECT_NAME})

install(DIRECTORY assets/applications DESTINATION share)
file(COPY assets/applications DESTINATION ${CMAKE_BINARY_DIR}/share)
install(DIRECTORY assets/icons DESTINATION share)
file(COPY assets/icons DESTINATION ${CMAKE_BINARY_DIR}/share)